2001-01-05  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/Filter.h: added filterbuf. Input filtering is not
	    implemented yet.
	* configure.am: added check for <streambuf>. You will need an
	    automike with a C++ check for this.
	* configure.in: regenerated from new configure.am.
	* TODO: updated todo list.

2001-01-04  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/*: made everything ISO C++ conforming, from what I can see
	    (mainly a great number of std:: additions).

2000-12-22  Al Riddoch  <ajr@ecs.soton.ac.uk>

	* Removed dependency on socket++ in test programs.

	* Added atlas.m4 autoconf macro script.

2000-12-21  Al Riddoch  <ajr@ecs.soton.ac.uk>

	* Split filters into header and cpp file in the same model
	  as Codecs.

	* Re-worked tutorial, test and benchmarks so they compile without
	  installing the library.

2000-12-20  Al Riddoch  <ajr@ecs.soton.ac.uk>

	* Removed hierarchical namespaces, leaving single flat Atlas
	  namespace.

	* Reduced template usage, especially removing all Stream
	  templates.

	* Split codecs into header and cpp file, and removed static Codec
	  instances.

	* Re-worked factories() static member function in Factory
	  so it now uses portable static list pointer instead of static
	  list.

2000-12-19  Al Riddoch  <ajr@ecs.soton.ac.uk>

	* Added atlas-config script.

2000-12-13  Al Riddoch  <ajr@ecs.soton.ac.uk>

	* Added first attempt at a UML class diagram.

2000-12-09  Aloril  <aloril@iki.fi>

	* added bool instanceOf(int classNo) const; method

2000-12-08  Aloril  <aloril@iki.fi>

	* Decoder::unknownObjectArrived(const Entity::Empty&); ->
	Decoder::objectArrived(const Entity::Anonymous&);

	* s/Empty/Anonymous/

	* added Atlas::Objects::Entity::Empty class which is used when
 	unknown object has arrived (usually unknown objects have pos
 	attribute, which is dynamic in Root):
	Decoder::unknownObjectArrived(const Entity::Empty&);
	and for args: if(op->getArgs()[0]->getClassNo() == Entity::EMPTY_NO) ...
